testsuite/tests/rename/should_fail/T16999.hs
module T16999 where

data T = (->) Int Int
