testsuite/tests/rename/should_fail/T16999.stderr

T16999.hs:3:10: error: Illegal binding of built-in syntax: ->
